--- a/proxmox/createvm.yml
+++ b/proxmox/createvm.yml
@@ -1,29 +1,13 @@
 - hosts: proxmox
+  vars_files:
+   - pass.txt
 
   tasks:
-  - name: Create new VM with minimal options and given vmid
+  - name: Create DeeCee VM
     community.general.proxmox_kvm:
      api_user: root@pam
-     api_password: Kodi1234!
+     api_password: "{{ pass_key }}"
      api_host: '127.0.0.1'
      name: DeeCee
-     node: vmm01
-     state: present
-
-  - name: Create new VM with minimal options and given vmid
-    community.general.proxmox_kvm:
-     api_user: root@pam
-     api_password: Kodi1234!
-     api_host: '127.0.0.1'
-     name: Sokal
-     node: vmm01
-     state: present
-
-  - name: Create new VM with minimal options and given vmid
-    community.general.proxmox_kvm:
-     api_user: root@pam
-     api_password: Kodi1234!
-     api_host: '127.0.0.1'
-     name: Sonjin
      node: vmm01
      state: present
