switched to ubuntu container image, added docker install and portainer deployment

--- a/proxmox/createvm.yml
+++ b/proxmox/createvm.yml
@@ -11,3 +11,8 @@
      name: DeeCee
      node: vmm01
      state: present
+     cores: 4
+     memory: 4096
+     ostype: win10
+     description: Active Directory, Domain controller.
+
