breaking down different scripts into their own folder this makes it easier to choose which app to use when building the infrastructure and also makes it easier to navigate.

--- a/ansible/create-game-servers.yml
+++ b/ansible/create-game-servers.yml
@@ -98,7 +98,7 @@
 
   - name: copy Docker Compose files
     copy:
-      src: "{{playbook_dir}}/game-compose.yml"
+      src: "../docker/game-compose.yml"
       dest: ~/
 
   - name: deploy Docker Compose stack
