--- a/ansible/create-media.yml
+++ b/ansible/create-media.yml
@@ -62,21 +62,25 @@
     apt: name={{ item }} state=latest update_cache=yes
     loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools', 'nfs-common']
 
-  - name: Mount an Media volume
-    ansible.posix.mount:
-      src: 192.168.1.160:/mnt/media
-      path: /mnt/media
-      opts: rw
-      state: mounted
+  - name: mount the media share
+    mount:
       fstype: nfs
+      opts: defaults
+      dump: 0
+      passno: 0
+      state: mounted
+      src: 192.168.0.160:/mnt/media
+      path: "/mnt/media"
 
-  - name: Mount an Backups volume
-    ansible.posix.mount:
-      src: 192.168.1.160:/mnt/backups
-      path: /mnt/backups
-      opts: rw
-      state: mounted
+  - name: mount the backups share
+    mount:
       fstype: nfs
+      opts: defaults
+      dump: 0
+      passno: 0
+      state: mounted
+      src: 192.168.0.160:/mnt/backups
+      path: "/mnt/backups"
 
   - name: Add Docker GPG apt Key
     apt_key:
