Created first terraform script for media, planning to use terraform for creation of machines and ansible to update and configure them.

--- a/ansible/create-media.yml
+++ b/ansible/create-media.yml
@@ -122,5 +122,5 @@
   - name: deploy Docker Compose stack
     docker_compose:
       project_src: ~/
-      files: game-compose.yml
+      files: media-compose.yml
       state: present
